Added page content. Manually added pages now display the content.

--- a/view/thorium-cms/page/index.phtml
+++ b/view/thorium-cms/page/index.phtml
@@ -1,7 +1,7 @@
 <?php
 
     $page = $this->page;
+    $pageContent = $this->pageContent;
 
-?>
 
-Hello from page <?php echo $page ?> !
+echo $pageContent->getContent();
